--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,16 @@
-
-
-
-:root{
-    --Cornflower:#E7E9FC;
-    --iris:#4D5AE5;
-    --navy-blue:#2E2F42;
-    --white:#FFFFFF;
-    --state:#434455;
-    --cloud:#F4F4FD;
+:root {
+    --Cornflower: #E7E9FC;
+    --iris: #4D5AE5;
+    --navy-blue: #2E2F42;
+    --white: #FFFFFF;
+    --state: #434455;
+    --cloud: #F4F4FD;
 }
 
-body{
+body {
     font-family: "Roboto", sans-serif;
     color: var(--state);
     background-color: var(--white);
-    width: 1440px;
 }
 
 ul {
@@ -27,187 +23,266 @@ ul {
 }
 
 
-h1,
-h2,
-h3,
-p {
+h1,h2,h3,p {
     margin-block-start: 0;
     margin-block-end: 0;
     /* margin: 0; */
 }
-
 
 a {
     text-decoration: none;
     font-style: normal;
 }
 
-header{
-   display: flex;
-    width: 1440px;
-        height: 72px;
-        gap: 0px;
-        border: 0px 0px 1px 0px;
-        opacity: 0px;
-        border-bottom: 1px solid #E7E9FC;
-        background-color: var(--white);
-        margin-top: 24px;
+img{
+    display: block;
 }
 
-nav{
-        background-color: var(--white);
+
+nav {
+    background-color: var(--white);
 }
+
 .container{
-width: 1440px;
+    display: flex;
 }
 
-.logo{
-    margin-left: 156px;
-    font-family:"Raleway",sans-serif;
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-        text-align: left;
-        color: var(--iris);
-        text-transform: uppercase;
+.container-header-1{
+    width: 1156px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
 
-.logo-text-2{
-        font-family:"Raleway",sans-serif;
-            font-size: 18px;
-            font-weight: 700;
-            line-height: 21px;
-            letter-spacing: 0.03em;
-            text-align: left;
-            color: var(--navy-blue);
+.nav-header{
+    display: flex;
+    text-align: center;
+}
+
+.logo {
+    margin-right:76px ;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-align: left;
+    color: var(--iris);
+    text-transform: uppercase;
+}
+
+.logo-text-2 {
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: 0.03em;
+    text-align: left;
+    color: var(--navy-blue);
 }
 
 .list-logo{
-    display:flex;
-    margin-top: -30px;
-    margin-left: 347px;
+    display: flex;
+    gap: 40px;
 }
 
-
-.link-logo{
-    padding: 9px;
-            font-size: 16px;
-            font-weight: 500;
-            line-height: 24px;
-            letter-spacing: 0.02em;
-            text-align: left;
-        color: var(--navy-blue);
-        
+.link-logo {
+    padding: 24px 0;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: var(--navy-blue);
 }
 
-
-
-.link-logo:hover{
+.link-logo:hover {
     color: #404bbf;
 }
 
-.link-logo:focus{
+.link-logo:focus {
     color: #404bbf;
 }
 
 
-.contacts{
+.contacts {
     font-style: normal;
-    margin-left: 940px;
-    margin-right: 156px;
+    display: flex;
+    gap: 40px;
 }
 
 
-.list-contacts{
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        text-align: left;
-        color: var(--state);
+.list-contacts {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: var(--state);
 }
 
-.list-contacts:hover{
+.list-contacts:hover {
     color: #404bbf;
 }
 
-.list-contacts:focus{
+.list-contacts:focus {
     color: #404bbf;
 }
 
-.hero-image{
-        background-color: var(--navy-blue);
-        width: 1440px;
-            height: 600px;
-           
+.hero-image {
+    background-color: var(--navy-blue);
+    padding: 188px 0;
 }
 
-.hero-title{
-        font-size: 56px;
-        font-weight: 700;
-        line-height: 1.07;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: var(--white);
-        width: 496px;
-            height: 120px;
-            padding-top: 188px;
-            margin-left: 472px;
-          
+.hero-title {
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: var(--white);
+    max-width: 496px;
 }
 
-.hero-button{
-        background-color: var(--iris);
-        color: var(--white);
-        font-weight: 500;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
-        cursor: pointer;
-        width: Hug (169px)px;
-            height: Hug (56px)px;
-            top: 428px;
-            left: 636px;
-            padding: 16px 32px 16px 32px;
-            gap: 10px;
-            border-radius: 4px 0px 0px 0px;
-            opacity: 0px;
-            margin-top:150px ;
-            margin-left: 636px;
+.hero-button {
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
+    background-color: var(--iris);
+    color: var(--white);
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    cursor: pointer;
 }
 
-.hero-button:hover{
-background-color: #404BBF;
+.hero-button:hover {
+    background-color: #404BBF;
 }
 
 
-.hero-button:focus{
+.hero-button:focus {
     background-color: #404BBF;
 }
 
 .section-1{
-        margin-top: 120px;
-        margin-bottom: 120px;
+    padding: 120px 0;
 }
 
-.section-name{
+.list-section-{
+    display: flex;
+    gap: 24px;
+    margin-right: 24px;
+}
+
+.list-section-1{
+    width: calc((100%-72px)/4);
+}
+
+.list-section-2{
+    margin-right: 0;
+}
+
+.point-list {
+    margin-bottom: 8px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--navy-blue);
+}
+
+
+.paragraf-list {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: var(--state);
+}
+
+.section-our-team {
+    background-color: var(--cloud);
+    padding: 120px 0;
+}
+
+.our-section {
     font-size: 36px;
     font-weight: 700;
-    line-height: 40px;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
+    text-transform: capitalize;
+    color: var(--navy-blue);
+    margin-bottom: 72px;
 }
 
-.point-list{
+.list-section-our{
+display: flex;
+    gap: 24px;
+}
+
+.list-section-team {
+    background-color: var(--white);
+    width: calc((100%-72px)/4);
+    border-radius: 0px 0px 4px 4px;
+}
+
+
+
+
+.partner-team {
+    font-size: 20px;
     font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-        letter-spacing: 0.02em;
-        color: var(--navy-blue);
-    }
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: var(--navy-blue);
+}
+
+.job-name {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: var(--state);
+}
 
 
-.paragraf-list{
+.name-section {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    text-transform: capitalize;
+    color: var(--navy-blue);
+}
+
+.list-our-1 {
+    color: var(--white);
+}
+
+
+.list-our-2 {
+    color: var(--white);
+}
+
+
+
+.piont-our {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: var(--navy-blue);
+}
+
+.paragraf-our {
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
@@ -216,103 +291,26 @@ background-color: #404BBF;
     color: var(--state);
 }
 
-.section-our-team{
-        background-color: var(--cloud);
-}
-
-.our-section{
-        font-size: 36px;
-        font-weight: 700;
-        line-height: 1.11;
-        letter-spacing: 0.02em;
-        text-align: center;
-        text-transform: capitalize;
-        color: var(--navy-blue);
-}
-
-.list-section-team{
-        background-color: var(--white);
+.footer {
+    background-color: var(--navy-blue);
 }
 
 
-.partner-team{
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: var(--navy-blue);
-}
-
-.job-name{
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: var(--state);
-}
-
-
-.name-section{
-        font-size: 36px;
-        font-weight: 700;
-        line-height: 1.11;
-        letter-spacing: 0.02em;
-        text-align: center;
-        text-transform: capitalize;
-        color: var(--navy-blue);
-}
-
-.list-our-1{
-    color: var(--white);
-}
-
-
-.list-our-2{
-    color: var(--white);
-}
-
-
-
-.piont-our{
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        text-align: left;
-        color: var(--navy-blue);
-}
-
-.paragraf-our{
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    text-align: left;
-    color: var(--state);
-}
-
-.footer{
-        background-color: var(--navy-blue);
-}
-
-
-.studio{
+.studio {
     font-family: Raleway;
     font-size: 18px;
     font-weight: 700;
     line-height: 21px;
     letter-spacing: 0.03em;
     text-align: left;
-color: #F4F4FD;
+    color: #F4F4FD;
 }
 
-.footer-paragraf{
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 24px;
-            letter-spacing: 0.02em;
-            text-align: left;
-            color: var(--cloud);
+.footer-paragraf {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: var(--cloud);
 }
