--- a/css/style.css
+++ b/css/style.css
@@ -43,14 +43,18 @@ nav {
     background-color: var(--white);
 }
 
+.headre-nav{
+    border-bottom: 1px solid #E7E9FC;
+}
+
 .container{
     display: flex;
 }
 
-.container-header-1{
+.container-header-nav{
     width: 1158px;
-    margin: 0px auto;
-    padding: 0px 15px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
 
 .nav-header{
@@ -186,7 +190,7 @@ nav {
 }
 
 .list-section-point{
-    width: calc((100%-72px)/4);
+    width: calc((100%-72px) /4);
 }
 
 .list-section-2{
@@ -263,7 +267,7 @@ display: flex;
     color: var(--state);
 }
 
-.section-our-3{
+.section-our-three{
     padding-top: 120px;
     padding-bottom: 120px;
 }
@@ -282,18 +286,18 @@ display: flex;
     margin-bottom: 72px;
 }
 
-.list-section-our-3{
+.list-section-our-three{
     display: flex;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
 }
 
-.list-our-1-list{
+.list-our-one-list{
     width: calc((100%-48px)/3);
 }
 
-.conatiner-section-3{
+.conatiner-section-three{
     padding: 32px 16px;
     border: 1px solid #E7E9FC ;
     border-top: none;
@@ -335,8 +339,8 @@ display: flex;
 }
 
 .logo-footer-link{
-    display: inline-block;
-    margin-bottom: 16px;
+    display:inline-block;
+    margin-bottom:16px;
 }
 
 .studio {
