--- a/css/style.css
+++ b/css/style.css
@@ -179,8 +179,17 @@ nav {
     padding: 120px 0;
 }
 
-.section-name{
-    visibility: hidden;
+.visually-hidden{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: var(--white);
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .list-section-no-name{
@@ -280,6 +289,8 @@ display: flex;
     text-align: center;
     text-transform: capitalize;
     color: var(--navy-blue);
+    margin-bottom: 72px;
+    
 }
 
 .name-section-our{
@@ -293,19 +304,16 @@ display: flex;
     row-gap: 48px;
 }
 
-.list-our-one-list{
+
+
+.list-our-one-list {
     width: calc((100%-48px)/3);
 }
 
-.conatiner-section-three{
-    padding: 32px 16px;
-    border: 1px solid #E7E9FC ;
-    border-top: none;
-    margin-bottom: 8px;
-}
 
-.list-our-1 {
+.list-our-one {
     color: var(--white);
+    width: calc((100%-48px)/3);
 }
 
 
@@ -313,6 +321,12 @@ display: flex;
     color: var(--white);
 }
 
+.conatiner-section-three {
+    padding: 32px 16px;
+    border: 1px solid #E7E9FC;
+    border-top: none;
+    margin-bottom: 8px;
+}
 
 
 .piont-our {
@@ -337,6 +351,11 @@ display: flex;
     background-color: var(--navy-blue);
     padding: 100px 0;
 }
+.logo{
+    display: inline-block;
+        margin-bottom: 16px;
+    }
+
 
 .logo-footer-link{
     display:inline-block;
