--- a/css/style.css
+++ b/css/style.css
@@ -44,16 +44,22 @@ nav {
 }
 
 .headre-nav{
-    border-bottom: 1px solid #E7E9FC;
+    border-bottom: 1px solid #e7e9fc;
 }
 
 .container{
-    display: flex;
-}
+    display: flex;}
+
 
 .container-header-nav{
     width: 1158px;
+}
+
+.container-header-nav{
     margin: 0 auto;
+}
+
+.container-header-nav{
     padding: 0 15px;
 }
 
@@ -180,16 +186,7 @@ nav {
 }
 
 .visually-hidden{
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: var(--white);
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+    display: none;
 }
 
 .list-section-no-name{
@@ -313,7 +310,6 @@ display: flex;
 
 .list-our-one {
     color: var(--white);
-    width: calc((100%-48px)/3);
 }
 
 
@@ -321,21 +317,23 @@ display: flex;
     color: var(--white);
 }
 
-.conatiner-section-three {
+.container-section-three {
     padding: 32px 16px;
-    border: 1px solid #E7E9FC;
+    border: 1px solid #e7e9fc;
     border-top: none;
     margin-bottom: 8px;
 }
 
 
-.piont-our {
+.point-our {
     font-size: 20px;
     font-weight: 500;
     line-height: 24px;
     letter-spacing: 0.02em;
     text-align: left;
     color: var(--navy-blue);
+    padding-top: 32px;
+    padding-bottom: 8px;
 }
 
 .paragraf-our {
@@ -356,9 +354,11 @@ display: flex;
         margin-bottom: 16px;
     }
 
+.logo-footer-link{
+    display: inline-block;
+}
 
 .logo-footer-link{
-    display:inline-block;
     margin-bottom:16px;
 }
 
